tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_network_rules.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [
    "api.github.com",
    "registry.npmjs.org",
    "crates.io"
  ],
  "deny_network": [
    "*.evil.com",
    "*.malware.net"
  ],
  "require_approval_for": []
}
