tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_read_deny.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [
    ".env",
    ".env.*",
    "secrets/**",
    "**/*.pem",
    "**/*.key"
  ],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
