tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_read_write_deny_combined.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [
    "/etc/passwd",
    "/etc/shadow",
    "~/.ssh/**"
  ],
  "deny_write": [
    "**/*"
  ],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
