tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_require_approval.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": [
    "delete_file",
    "bash",
    "write_file"
  ]
}
