tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_tool_allow_only.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [
    "read_file",
    "glob",
    "grep"
  ],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
