tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_tool_deny.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [
    "bash",
    "exec",
    "write_file"
  ],
  "deny_read": [],
  "deny_write": [],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
