tests/snapshots/contract_snapshot_exhaustive__exhaustive_policy_write_deny.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: p
---
{
  "allowed_tools": [],
  "disallowed_tools": [],
  "deny_read": [],
  "deny_write": [
    "Cargo.lock",
    "package-lock.json",
    "yarn.lock",
    "**/*.lock",
    ".github/**"
  ],
  "allow_network": [],
  "deny_network": [],
  "require_approval_for": []
}
