tests/snapshots/contract_snapshot_exhaustive__exhaustive_receipt_builder_full.snap
---
source: tests/contract_snapshot_exhaustive.rs
expression: snap_json(&r)
---
{
  "meta": {
    "run_id": "01010101-0202-4303-8404-050505050505",
    "work_order_id": "a1a1a1a1-b2b2-4c3c-8d4d-e5e5e5e5e5e5",
    "contract_version": "abp/v0.1",
    "started_at": "2025-07-01T12:00:00Z",
    "finished_at": "2025-07-01T12:10:00Z",
    "duration_ms": 600000
  },
  "backend": {
    "id": "sidecar:node",
    "backend_version": "2.0.0",
    "adapter_version": "1.0.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "emulated"
  },
  "mode": "mapped",
  "usage_raw": {
    "prompt_tokens": 100
  },
  "usage": {
    "input_tokens": 100,
    "output_tokens": 50,
    "cache_read_tokens": null,
    "cache_write_tokens": null,
    "request_units": null,
    "estimated_cost_usd": null
  },
  "trace": [
    {
      "ts": "2025-07-01T12:00:00Z",
      "type": "run_started",
      "message": "go"
    }
  ],
  "artifacts": [
    {
      "kind": "patch",
      "path": "out.patch"
    }
  ],
  "verification": {
    "git_diff": "diff",
    "git_status": "M file.rs",
    "harness_ok": true
  },
  "outcome": "complete",
  "receipt_sha256": null
}
